--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,25 +1,3 @@
 <h1>Make a New Cat From Scratch!</h1>
 
-  <form action="<%= cats_url %>" method="POST">
-    <label for="cat_name">Cat name:</label>
-    <input type="text" name="cat[name]">
-    <br>
-
-    <input type="radio" name="cat[sex]" id="cat_sex_female" value="F">
-    <label for="cat_sex_female">Female</label>
-
-    <input type="radio" name="cat[sex]" id="cat_sex_male" value="M">
-    <label for="cat_sex_male">Male</label>
-    <br>
-
-    <label for="cat_color">Cat Color</label>
-    <select name="cat[color]" id="cat_color">
-      <option value=""></option>
-      <option value="brown">Brown</option>
-      <option value="orange">Orange</option>
-      <option value="black">Black</option>
-      <option value="white">White</option>
-    </select>
-    <br>
-
-    <input type="date" name="cat[birth_date]" id="cat_birth_date" value="">
+  <%= render 'form', cat: @cat %>
