Create rental requests and show on cat page

--- a/app/views/cat_rental_requests/new.html.erb
+++ b/app/views/cat_rental_requests/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Create a Rental Request!</h1>
 
-<form action="cat_rental_requests_url" method="POST">
+<form action="<%=cat_rental_requests_url%>" method="POST">
 
   <label for="select_cat">Select Cat to Rent:</label>
   <select name="cat_rental_request[cat_id]" id="select_cat">
