--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -18,3 +18,22 @@
     <td> <%=@cat.description ||= "A lovely cat" %></td>
   </tr>
 </table>
+<br>
+
+<strong><u>  Rental Requests</strong></u>
+<%@cat.rental_requests.each do |rental|%>
+
+  <table>
+    <tr>
+      <th>Start Date:</th>
+      <td> <%= rental.start_date %></td>
+    </tr>
+    <tr>
+      <th>End Date:</th>
+      <td> <%= rental.end_date %></td>
+    </tr>
+    <br>
+    <tr>
+    </tr>
+  </table>
+<%end%>
