Ensure session token and add create new account button.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
   <form action="<%= new_session_url %>" method="GET" >
     <button>Log In</button>
   </form>
+  <form action="<%= new_user_url %>" method="GET" >
+    <button>Create New Account</button>
+  </form>
 
 <% end %>
 
