--- a/app/views/cat_rental_requests/new.html.erb
+++ b/app/views/cat_rental_requests/new.html.erb
@@ -6,7 +6,11 @@
   <select name="cat_rental_request[cat_id]" id="select_cat">
 
     <%Cat.all.each do |cat|%>
-      <option value="<%=cat.id%>"><%=cat.name%></option>
+      <%if cat.id == @request.cat_id%>
+        <option value="<%=cat.id%>" selected><%=cat.name%></option>
+      <% else %>
+        <option value="<%=cat.id%>"><%=cat.name%></option>
+      <% end %>
     <%end%>
 
   </select>
