--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -20,24 +20,35 @@
 </table>
 <br>
 
-<strong><u>  Rental Requests</strong></u>
-<%@cat.rental_requests.each do |rental|%>
+<% unless @cat.rental_requests.empty? %>
+  <strong><u><%="Rental Requests"%></strong></u>
+  <%@cat.rental_requests.each do |rental|%>
 
-  <table>
-    <tr>
-      <th>Start Date:</th>
-      <td> <%= rental.start_date %></td>
-    </tr>
-    <tr>
-      <th>End Date:</th>
-      <td> <%= rental.end_date %></td>
-    </tr>
-    <br>
-    <tr>
-    </tr>
-  </table>
+    <table>
+      <tr>
+        <th>Rental Requester:</th>
+        <td> <%= User.find(@cat.user_id).username %></td>
+      </tr>
+      <tr>
+        <th>Start Date:</th>
+        <td> <%= rental.start_date %></td>
+      </tr>
+      <tr>
+        <th>End Date:</th>
+        <td> <%= rental.end_date %></td>
+      </tr>
+      <br>
+      <tr>
+      </tr>
+    </table>
+  <%end%>
 <%end%>
 
-<br>
+<% if current_user.cats.include?(@cat) %>
+  <br>
+  <a href="<%= edit_cat_url(@cat) %>" >Edit Cat Info</a>
+<%else%>
+  <a href="<%= "/cat_rental_requests/new/?cat_id=#{@cat.id}"%>" >Rent this Cat!</a>
+<% end %>
 <br>
 <a href="<%= cats_url %>" >All Cats</a>
