--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -27,7 +27,7 @@
     <table>
       <tr>
         <th>Rental Requester:</th>
-        <td> <%= User.find(@cat.user_id).username %></td>
+        <td> <%= User.find(rental.user_id).username %></td>
       </tr>
       <tr>
         <th>Start Date:</th>
